bk_ida/gccida/g3/insns_match_p
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1320:4: error: expected ';' after expression
rtx v13; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1320:5: error: use of undeclared identifier 'v13'
rtx v13; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1321:4: error: expected ';' after expression
rtx v14; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1321:5: error: use of undeclared identifier 'v14'
rtx v14; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1322:4: error: expected ';' after expression
rtx v15; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1322:5: error: use of undeclared identifier 'v15'
rtx v15; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1334:4: error: expected ';' after expression
rtx s1a; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1334:5: error: use of undeclared identifier 's1a'
rtx s1a; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1335:4: error: expected ';' after expression
rtx s1; // [rsp+0h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1335:5: error: use of undeclared identifier 's1'
rtx s1; // [rsp+0h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1336:4: error: expected ';' after expression
rtx s2; // [rsp+8h] [rbp-40h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1336:5: error: use of undeclared identifier 's2'
rtx s2; // [rsp+8h] [rbp-40h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1340:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)i2[2]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1341:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = (  struct rtx_def *)i1[2]; 
                         ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1342:85: error: expected expression
if ( *( _WORD *)v7 != *( _WORD *)v6 || *( _WORD *)i1 == 34 && !rtx_equal_p( *( rtx *)&i1[4], *( rtx *)&i2[4]) ) 
                                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1342:102: error: expected expression
if ( *( _WORD *)v7 != *( _WORD *)v6 || *( _WORD *)i1 == 34 && !rtx_equal_p( *( rtx *)&i1[4], *( rtx *)&i2[4]) ) 
                                                                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1346:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)i1[3].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1347:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v17.rtwint = ( __int64)i2[3].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/cfgcleanup.c:1423:1: error: use of undeclared identifier 'v13'
v13 = 0LL; 
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/insns_match_p/src/obj/cfgcleanup.o] Error 1
